Bug 595785.  Make sure the right channel is always passed to download progress listeners' onStateChange methods.  r=sdwilsh,bzbarsky